--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title Wellcome!
+        title Wellcome Server Momo!
     body
         h1= title
         div.remark
